chore: spacing fixes across the app

--- a/src/index.css
+++ b/src/index.css
@@ -96,6 +96,7 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+
 }
 
 @layer base {
@@ -109,4 +110,14 @@
 
 * {
   font-family: 'Geist', sans-serif; 
+}
+
+.righteous-regular {
+  font-family: "Righteous", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.logo-part-1 {
+
 }
